# tinyplot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  test_evaluator.c  test_parser.c  test_tokenizer.c
.github/workflows/: cmake-multi-platform.yml
